# DataLeak

./: .gitignore  Dockerfile  README.md  django.yml  main.py  manage.py  pyproject.toml  pytest.ini  requirements.txt  to_do_list.md
.github/workflows/: django.yml  requirements.txt
data_leaks/: asgi.py  manage.py  urls.py  views.py  wsgi.py
data_leaks/data_leaks/: asgi.py  file_type.py  forms.py  logger_config.py  services.py  settings.py  urls.py  views.py  wsgi.py
data_leaks/data_leaks/forms/: forms.py
data_leaks/data_leaks/templates/: home.html  http404.html  meta.html  meta_view.html  valentine.html
data_leaks/data_leaks/tests/: test_file_type.py  test_services.py  test_views.py
data_leaks/data_leaks/utils/: logger_config.py  services.py
data_leaks/static/css/: home.css  meta_view.css
