[project]
name = "dataleak"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asgiref==3.11.1",
    "colorama==0.4.6",
    "django==5.2.11",
    "loguru==0.7.3",
    "pillow==12.1.0",
    "pypdf==6.6.2",
    "python-dotenv==1.2.1",
    "simplejson>=3.20.2",
    "sqlparse==0.5.5",
    "tzdata==2025.3",
    "uv==0.9.29",
    "win32-setctime==1.2.0",
]
